/*
 * $Id: ChangeLog,v 1.5087 2006/07/25 11:10:50 bdj Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2006-07-25 23:27 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/include/hbapirdd.h
  * xharbour/source/rdd/dbcmd.c
  * xharbour/source/vm/hvm.c
    * do not generate RT errors "Alias does not exist" in constructions
      like: ("NOT_EXISTING_ALIAS")->(...)
      Clipper compatible modifications. I do not like it but current
      previous behavior made problems for people who have code like:
         if ("NOT_EXISTING_ALIAS")->(used())
            ...
         else
            ? "Table not open..."
         endif
    ! fixed some other RT errors to be Clipper compatible

2006-07-25 18:15 UTC+0700 Budyanto Dj. <budyanto@centrin.net.id>
  * contrib/gtwvw/hbgtwvw.h
  * contrib/gtwvw/gtwvw.c
    * Revert Fransesco's last change, restore the old behaviour of ALT+C.
      This is a temporary solution until hb_gtHandleClose() is fixed.
      Fransesco, I hope you don't mind.
    * hb_wvw_gtDrawImage()
      Rewritten. Now supports displaying transparent image if
      bTransp parameter is TRUE.
    * hb_wvw_gtRenderPicture()
      Modified to support displaying transparent image if
      bTransp parameter is TRUE.
    * HB_FUNC( WVW_DRAWIMAGE )
      Added lTransp optional parameter.
      Supports displaying images with proportional height/width ratio.
    + .PRG callable wvw_SetMaxBMcache()
      This is to get/set maximum number of bitmap cache for WVW_DRAWIMAGE.
    + .PRG callable wvw_NumBMcache()
      This is to get current number of bitmap cached by WVW_DRAWIMAGE.
  * contrib/gtwvw/doc/whatsnew.txt
    * notes about this change.
  + contrib/gtwvw/samples/drawimg.prg
  + contrib/gtwvw/samples/wutil.prg
  + contrib/gtwvw/samples/wutil.ch
  + contrib/gtwvw/samples/drawimg.bat